WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152481
Modern IDB: storage/indexeddb/transaction-basics.html fails
https://bugs.webkit.org/show_bug.cgi?id=152481
Summary
Modern IDB: storage/indexeddb/transaction-basics.html fails
Brady Eidson
Reported
2015-12-21 10:30:57 PST
Modern IDB: storage/indexeddb/transaction-basics.html fails Another error message update. One of the error messages in code is obviously wrong. The rest are fixed by updating expectations.
Attachments
Patch v1
(13.32 KB, patch)
2015-12-21 10:34 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-21 10:34:51 PST
Created
attachment 267755
[details]
Patch v1
WebKit Commit Bot
Comment 2
2015-12-23 23:39:26 PST
Comment on
attachment 267755
[details]
Patch v1 Clearing flags on attachment: 267755 Committed
r194413
: <
http://trac.webkit.org/changeset/194413
>
WebKit Commit Bot
Comment 3
2015-12-23 23:39:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug