Modern IDB: storage/indexeddb/transaction-basics.html fails. https://bugs.webkit.org/show_bug.cgi?id=152481

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (Failing test now passes).

* Modules/indexeddb/client/IDBDatabaseImpl.cpp:
(WebCore::IDBClient::IDBDatabase::transaction): Include the invalid string argument
  in the error message.

LayoutTests:

* platform/mac-wk1/TestExpectations:
* storage/indexeddb/modern/idbdatabase-transaction-failures-expected.txt:
* storage/indexeddb/transaction-basics-expected.txt:


Canonical link: https://commits.webkit.org/170651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194413 268f45cc-cd09-0410-ab3c-d52691b4dbfc